feat: smash the like button complete

--- a/src/hulk-smash/index.pug
+++ b/src/hulk-smash/index.pug
@@ -1,4 +1,5 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src='./Physics2dPlugin.min.js')
   script(src='./gsap.min.js')
