--- a/src/css-leif/style.styl
+++ b/src/css-leif/style.styl
@@ -15,9 +15,13 @@ c($p)
   --min-size 200
   --unit calc((var(--size) / 493) * var(--coefficient))
   --stroke hsl(0, 0%, 5%)
-  --lip-color hsla(0, 100%, 85%, 1)
-  --eye-shade hsla(20, 20%, 25%, 1)
-  --face hsla(0, 0%, 95%, 1)
+  --lip-color hsla(0, 100%, 85%, 1.2)
+  --cheek-color hsla(0, 100%, 75%, 1)
+  --cap-color hsla(100, 90%, 40%, 1)
+  --eye-shade hsla(20, 20%, 25%, 1.2)
+  --fur-color hsla(33, 23%, 62%, 1)
+  --face hsla(0, 0%, 95%,1.1)
+  --default-petal-color red
   --stroke-border '%s solid var(--stroke)' % u(5)
 
 img
@@ -48,12 +52,11 @@ img
     height 48%
     left 51.5%
     transform translate(-50%, 0%)
-    background rgba(128,255,0,0.24)
+    background var(--fur-color)
     border-radius 50% / 50%
     border var(--stroke-border)
 
   &__face
-    background hsla(260, 100%, 50%, 0.25)
     bottom 7%
     left 3%
     height 85%
@@ -61,8 +64,46 @@ img
     border-radius 47% 50% 61% 52%/48% 57% 54% 56%
     overflow hidden
 
+    &-border
+      height 100%
+      width 100%
+      div:nth-of-type(1)
+        height 74%
+        width 47%
+        background var(--face)
+        border-radius 50%
+        top 6%
+        left -1%
+        transform rotate(17deg)
+
+      div:nth-of-type(2)
+        background var(--face)
+        top 4%
+        transform rotate(-44deg)
+        right 4%
+        border-radius 50%
+        height 84%
+        width 51%
+
+      div:nth-of-type(3)
+        height 150%
+        width 200%
+        top 50%
+        left 50%
+        background var(--face)
+        transform translate(-50%, 0)
+
+  &__face-patch
+    height 150%
+    width 100%
+    top 40%
+    left 50%
+    background var(--face)
+    transform translate(-50%, 0)
+    c(polygon(0 15%, 8% 2%, 15% 9%, 26% 9%, 31% 0, 50% 0, 53% 11%, 68% 15%, 77% 8%, 100% 42%))
+
   &__nose
-    background hsla(0, 100%, 50%, 0.4)
+    background var(--lip-color)
     top 50%
     left 27%
     border-radius 50%/50%
@@ -87,7 +128,7 @@ img
       top 37%
 
   &__cheek
-    background hsla(280, 100%, 50%, 0.3)
+    background var(--cheek-color)
     border-radius 50% 50% 40% 60% / 50% 50% 50% 50%
 
     &--left
@@ -102,14 +143,23 @@ img
       top 62%
       right 18%
 
+  &__mouth-patch
+    width 50%
+    height 5%
+    background var(--face)
+    bottom 36%
+    left 14%
+    transform-origin 0 100%
+    transform rotate(5deg)
+
   &__mouth
     width 45%
     height 26%
     background var(--face)
     bottom 12%
     left 14%
-    overflow hidden
-    c(polygon(0 5%, 100% 20%, 100% 100%, 0 100%))
+    // overflow hidden
+    c(polygon(0 5%, 100% 17%, 100% 100%, 0 100%))
 
     & > div:nth-of-type(1)
       background var(--lip-color)
@@ -141,7 +191,7 @@ img
         bottom -2%
         left 50%
         transform translate(-50%, 0)
-        background hsl(0, 100%, 50%)
+        background var(--cheek-color)
 
     & > div:nth-of-type(3)
       background var(--lip-color)
@@ -155,7 +205,7 @@ img
 
     & > div:nth-of-type(4)
       background var(--face)
-      bottom 66%
+      bottom 62%
       width 185%
       height 200%
       left 50%
@@ -181,6 +231,37 @@ img
       transform rotate(52deg) translate(0%, 5%)
 
   &__eye
+    &--left
+      height 40%
+      width 30%
+      top 22%
+      background var(--face)
+      overflow hidden
+
+      & > div
+        background var(--eye-shade)
+        height 111%
+        width 107%
+        right 0
+        top 0
+        border-radius 65% 30% 50% 50% / 78% 36% 50% 0%
+
+        & > div:nth-of-type(1)
+          background var(--face)
+          height 100%
+          width 100%
+          border-radius 65% 30% 50% 50% / 78% 36% 50% 0%
+          top 29%
+          left 6%
+          transform rotate(4deg)
+
+        & > div:nth-of-type(2)
+          background var(--eye-shade)
+          width 68%
+          height 68%
+          border-radius 50%
+          right 0
+
     &--right
       background var(--face)
       height 45%
@@ -197,7 +278,7 @@ img
         left 0
         top 3%
         border-radius 50% 50% 0 100% /50% 30% 0 55%
-        overflow hidden
+        // overflow hidden
 
         & > div:nth-of-type(1)
           background var(--face)
@@ -224,6 +305,193 @@ img
             top 17%
             transform rotate(-60deg)
 
+  &__cap
+    height 20%
+    width 30%
+    background hsla(320, 100%, 50%, 0.2)
+    left 39%
+    top 1%
+
+    & > div:nth-of-type(1)
+      right 0
+      top 0
+      width 90%
+      height 150%
+      border-radius 50%
+      border var(--stroke-border)
+      background var(--cap-color)
+
+      & > div
+        background var(--cap-color)
+        height 10%
+        width 17%
+        border-radius 50%
+        top 13%
+        left 31%
+        // z-index 2
+
+      & > div:nth-of-type(1)
+        z-index 2
+
+      & > div:nth-of-type(2)
+      & > div:nth-of-type(3)
+      & > div:nth-of-type(4)
+      & > div:nth-of-type(5)
+      & > div:nth-of-type(6)
+        background hsla(50, 100%, 50%, 1)
+        transform translate(calc(var(--x, 0) * 1%), calc(var(--y, 0) * 1%)) rotate(calc(var(--r, 0) * 1deg))
+
+      & > div:nth-of-type(2)
+        --x -55
+        --y -5
+
+      & > div:nth-of-type(3)
+        --x 22
+        --y -70
+        --r 120
+        height 12%
+
+      & > div:nth-of-type(4)
+        --x 85
+        --y -5
+        --r -20
+        height 11%
+
+      & > div:nth-of-type(5)
+        --x 30
+        --y 80
+        --r 60
+        height 11%
+      & > div:nth-of-type(6)
+        --x -50
+        --y 80
+        --r 130
+        height 11%
 
 
 
+    // Peak/brim
+    & > div:nth-of-type(2)
+      width 107%
+      height 62%
+      top 48%
+      border var(--stroke-border)
+      border-radius 50%
+      transform rotate(17deg) translate(-1%, 1%)
+      background var(--cap-color)
+
+
+.flower
+  height calc(var(--size, 125) * var(--unit))
+  width calc(var(--size, 125) * var(--unit))
+  bottom 1%
+  left 50%
+  transform translate(-50%, 0) translate(calc(var(--x, 0) * 1%), calc(var(--y, 0) * 1%)) rotate(calc(var(--r, 0) * 1deg))
+
+  &__core
+    top 50%
+    left 50%
+    height 30%
+    width 30%
+    border-radius 50%
+    border var(--stroke-border)
+    transform translate(-50%, -50%)
+    background hsla(60, 100%, 50%, 1)
+    transform-style preserve-3d
+
+    &:after
+    &:before
+      content ''
+      height 25%
+      width 220%
+      background var(--stroke)
+      border-radius 5% / 50%
+      top 50%
+      left 50%
+      transform translate3d(-50%, -50%, -1px)
+
+    &:after
+      transform translate3d(-50%, -50%, -1px) rotate(90deg)
+
+  &__petal
+    height 50%
+    width 50%
+    top 0
+    left 50%
+    transform translate(-50%, 0)
+    transform-origin 50% 100%
+    c(polygon(-50% 0, 50% 100%, 150% 0))
+
+    &:after
+      content ''
+      width 60%
+      left 50%
+      height 100%
+      border-radius 50%
+      border-top u(10) solid var(--petal-color, var(--default-petal-color))
+      transform-origin 50% 0
+      transform translate(-50%, 0) rotate(180deg) translate(0, -34%)
+      c(inset(0 0 80% 0))
+
+    &--0
+      transform translate(-50%, 0) rotate(0deg)
+    &--1
+      transform translate(-50%, 0) rotate(90deg)
+    &--2
+      transform translate(-50%, 0) rotate(180deg)
+    &--3
+      transform translate(-50%, 0) rotate(270deg)
+
+
+    & > div:nth-of-type(1)
+      left 50%
+      width 60%
+      // transform-origin 0 25%
+      height 100%
+      bottom 0
+      border-radius 50% / 25%
+      background var(--stroke)
+      transform-origin 50% 100%
+      transform translate(-50%, 0) rotate(-23deg) translate(0, 0)
+
+    & > div:nth-of-type(2)
+      left 50%
+      width 60%
+      // transform-origin 100% 25%
+      height 100%
+      border-radius 50% / 25%
+      background var(--stroke)
+      transform-origin 50% 100%
+      transform translate(-50%, 0) rotate(23deg) translate(0, 0)
+
+      &:after
+        content ''
+        height 100%
+        width 100%
+        border-top u(10) solid var(--stroke)
+        border-radius 50%
+        transform-origin 50% 0
+        transform rotate(-23deg) rotate(-180deg) translate(65%, -18%)
+        c(inset(0 0 81% 0))
+
+    & > div:nth-of-type(3)
+      left 50%
+      width 100%
+      height 100%
+      bottom 0
+      transform translate(-50%, 0)
+      c(polygon(-34% 0, 50% 90%, 134% 0))
+
+      &:after
+      &:before
+        content ''
+        height 100%
+        width 43%
+        left 50%
+        bottom 0
+        border-radius 50% / 25%
+        background var(--petal-color, var(--default-petal-color))
+      &:before
+        transform translate(-50%, 0) rotate(37deg) translate(27%, 0%)
+      &:after
+        transform translate(-50%, 0) rotate(-37deg) translate(-27%, 0%)
