--- a/src/launch-control/index.pug
+++ b/src/launch-control/index.pug
@@ -1,4 +1,5 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src='https://unpkg.com/splitting/dist/splitting.min.js')
   script(src='./gsap.min.js')
