feat: ensure initial scale with style - launch control

--- a/src/launch-control/style.styl
+++ b/src/launch-control/style.styl
@@ -77,7 +77,7 @@ body
   position absolute
   top 50%
   left 50%
-  transform translate(-50%, -50%)
+  transform translate(-50%, -50%) scale(0.5)
 
   &__window
     fill var(--window)
